sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/Country_Attributes_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Country Attributes Mapping</label>
    <pluralLabel>Country Attributes Mapping</pluralLabel>
</CustomObject>