sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Bank_Account_Number_Minimum_Digits__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number_Minimum_Digits__c</fullName>
    <description>LEM-10692: It is used to store the minimum number of digits required for &apos;Bank Account Number&apos; field on Payment Account.</description>
    <label>Bank Account Number Minimum Digits</label>
    <length>50</length>
    <type>Text</type>
</CustomField>