sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Bank_Account_Number_Regex__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number_Regex__c</fullName>
    <description>LEM-18246: It is used to store the regex for &apos;Bank Account Number&apos; field.</description>
    <label>Bank Account Number Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>