sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>LEM-716: This field stores the country name.</description>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>