sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>LEM-716: This field stores the country code.</description>
    <label>Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>