sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>LEM-567: This field stores the currency.</description>
    <label>Currency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>