sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>LEM-567: This field stores the currency code.</description>
    <label>Currency Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>