sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Phone_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Phone_Country_Code__c</fullName>
    <description>LEM-716: This field stores the country phone code.</description>
    <label>Phone Country Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>