sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Phone_Minimum_Digits__c.field-meta.xml
<CustomField>
    <fullName>Phone_Minimum_Digits__c</fullName>
    <description>LEM-716: This field stores the minimum digits in the phone number.</description>
    <label>Phone Minimum Digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>