sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Phone_Regex_Match__c.field-meta.xml
<CustomField>
    <fullName>Phone_Regex_Match__c</fullName>
    <description>LEM-18246: It is used to store the regex for &apos;Phone number&apos; field.</description>
    <label>Phone Regex Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>