sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Phone_Validation_Error__c.field-meta.xml
<CustomField>
    <fullName>Phone_Validation_Error__c</fullName>
    <description>LEM-18246: It is used to store the validation error for &apos;Phone number&apos; field.</description>
    <label>Phone Validation Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>