sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Provincial_Tax_ID_Regex__c.field-meta.xml
<CustomField>
    <fullName>Provincial_Tax_ID_Regex__c</fullName>
    <description>LEM-23533: It is used to store the regex for &apos;Provincial Tax Id&apos; field.</description>
    <label>Provincial Tax ID Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>