sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Routing_Number_Restricted_Starting_Digit__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number_Restricted_Starting_Digit__c</fullName>
    <description>LEM-10692: It is used to store the restricted starting digits for &apos;Routing Number&apos; field on Payment Account.</description>
    <label>Routing Number Restricted Starting Digit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>