sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Routing_Number_Total_Digits__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number_Total_Digits__c</fullName>
    <description>LEM-10692: It is used to store the total number of digits required for &apos;Routing Number&apos; field on Payment Account.</description>
    <label>Routing Number Total Digits</label>
    <length>50</length>
    <type>Text</type>
</CustomField>