sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/fields/Tax_ID_Total_Digits__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Total_Digits__c</fullName>
    <description>LEM-18246: It is used to store the digits for &apos;Tax ID&apos; field.</description>
    <label>Tax ID Total Digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>