sfdx-source/force-app/main/default/objects/Country_Attributes_Mapping__mdt/listViews/All_Values.listView-meta.xml
<ListView>
    <fullName>All_Values</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Country__c</columns>
    <columns>Country_Code__c</columns>
    <columns>Currency__c</columns>
    <columns>Currency_Code__c</columns>
    <columns>Phone_Country_Code__c</columns>
    <columns>Phone_Maximum_Digits__c</columns>
    <columns>Phone_Minimum_Digits__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
</ListView>